--- a/index.html
+++ b/index.html
@@ -2,17 +2,14 @@
 <html>
 <body>
 <figure class="swing">
-  <img src="https://www.heraldry-wiki.com/heraldrywiki/images/thumb/6/62/Viana_%28Maranh%C3%A3o%29.jpg/300px-Viana_%28Maranh%C3%A3o%29.jpg" width="230" >
+<img src="https://www.heraldry-wiki.com/heraldrywiki/images/thumb/6/62/Viana_%28Maranh%C3%A3o%29.jpg/300px-Viana_%28Maranh%C3%A3o%29.jpg" width="230" >
 </figure>  
 <section class="header">
 <ul id="main"></ul> 
-  <divc class="title-wrapper">
-
-    </div>
-
+<div class="title-wrapper">
 <fieldset id="campo" >
     <legend>Escoha os números fixos:</legend>
-        <div>
+       <div>
       <input type="checkbox" id="1" name="1">
       <label for="1">1</label>
       <input type="checkbox" id="2" name="2">
@@ -67,38 +64,22 @@
     </fieldset> 
     <h1 class="sweet-title">
       <span data-text="Sweet" id="heads1">GERADOR DE APOSTAS DO JOVEM</span>
-      
-
     </h1>
     <span class="top-title">Gere sua aposta!</span>
-
-
-	
-
-
 </div> 
-
-
 </section>
-
 <section class="disclaimer">
-  
 </section>
-
-
+</div>
 </body>
 </html>
+
 <script>
 count=1;
 var ja_foi=[]
-
 </script>
-
-
 <script>
 function gerar(){
-
-
 
 var checado=[]
 var n_checado=[]
@@ -306,7 +287,5 @@ span:hover{
     0% { transform: rotate(3deg); }
     100% { transform: rotate(-3deg); }
 }
-
-
 
 </style>
